docs/api/qiskit/0.19/qiskit.pulse.DriveChannel.mdx
---
title: DriveChannel (v0.19)
description: API reference for qiskit.pulse.DriveChannel in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.DriveChannel
---

# DriveChannel

<Class id="qiskit.pulse.DriveChannel" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/pulse/channels.py" signature="DriveChannel(index)" modifiers="class">
  Drive channels transmit signals to qubits which enact gate operations.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  **Raises**

  [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If `index` is not a nonnegative integer.

  ## Attributes

  <span id="drivechannel-index" />

  ### index

  <Attribute id="qiskit.pulse.DriveChannel.index" attributeTypeHint="int">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `int`
  </Attribute>

  <span id="drivechannel-name" />

  ### name

  <Attribute id="qiskit.pulse.DriveChannel.name" attributeTypeHint="str">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Attribute>

  <span id="drivechannel-prefix" />

  ### prefix

  <Attribute id="qiskit.pulse.DriveChannel.prefix" attributeValue="'d'">
    A shorthand string prefix for characterizing the channel type.
  </Attribute>

  ## Methods

  |   |
  | - |
</Class>

