docs/api/qiskit/0.25/qiskit.pulse.DriveChannel.mdx
---
title: DriveChannel
description: API reference for qiskit.pulse.DriveChannel
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.pulse.DriveChannel
---

# qiskit.pulse.DriveChannel

<Class id="qiskit.pulse.DriveChannel" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/pulse/channels.py" signature="DriveChannel(index)">
  Drive channels transmit signals to qubits which enact gate operations.

  Channel class.

  **Parameters**

  **index** (`int`) – Index of channel.

  ### \_\_init\_\_

  <Function id="qiskit.pulse.DriveChannel.__init__" name="__init__" signature="__init__(index)">
    Channel class.

    **Parameters**

    **index** (`int`) – Index of channel.
  </Function>

  ## Methods

  |                                                                                                                  |                                                                  |
  | ---------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------- |
  | [`__init__`](#qiskit.pulse.DriveChannel.__init__ "qiskit.pulse.DriveChannel.__init__")(index)                    | Channel class.                                                   |
  | [`assign`](#qiskit.pulse.DriveChannel.assign "qiskit.pulse.DriveChannel.assign")(parameter, value)               | Return a new channel with the input Parameter assigned to value. |
  | [`is_parameterized`](#qiskit.pulse.DriveChannel.is_parameterized "qiskit.pulse.DriveChannel.is_parameterized")() | Return True iff the channel is parameterized.                    |

  ## Attributes

  |                                                                                              |                                                                                    |
  | -------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------- |
  | [`index`](#qiskit.pulse.DriveChannel.index "qiskit.pulse.DriveChannel.index")                | Return the index of this channel.                                                  |
  | [`name`](#qiskit.pulse.DriveChannel.name "qiskit.pulse.DriveChannel.name")                   | Return the shorthand alias for this channel, which is based on its type and index. |
  | [`parameters`](#qiskit.pulse.DriveChannel.parameters "qiskit.pulse.DriveChannel.parameters") | Parameters which determine the channel index.                                      |
  | `prefix`                                                                                     |                                                                                    |

  ### assign

  <Function id="qiskit.pulse.DriveChannel.assign" name="assign" signature="assign(parameter, value)">
    Return a new channel with the input Parameter assigned to value.

    **Parameters**

    *   **parameter** (`Parameter`) – A parameter in this expression whose value will be updated.
    *   **value** (`Union`\[`ParameterExpression`, `float`, `int`]) – The new value to bind to.

    **Return type**

    [`Channel`](qiskit.pulse.channels#channel "qiskit.pulse.channels.Channel")

    **Returns**

    A new channel with updated parameters.

    **Raises**

    [**PulseError**](qiskit.pulse.PulseError "qiskit.pulse.PulseError") – If the parameter is not present in the channel.
  </Function>

  ### index

  <Function id="qiskit.pulse.DriveChannel.index" name="index" signature="property index">
    Return the index of this channel. The index is a label for a control signal line typically mapped trivially to a qubit index. For instance, `DriveChannel(0)` labels the signal line driving the qubit labeled with index 0.

    **Return type**

    `Union`\[`int`, `ParameterExpression`]
  </Function>

  ### is\_parameterized

  <Function id="qiskit.pulse.DriveChannel.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True iff the channel is parameterized.

    **Return type**

    `bool`
  </Function>

  ### name

  <Function id="qiskit.pulse.DriveChannel.name" name="name" signature="property name">
    Return the shorthand alias for this channel, which is based on its type and index.

    **Return type**

    `str`
  </Function>

  ### parameters

  <Function id="qiskit.pulse.DriveChannel.parameters" name="parameters" signature="property parameters">
    Parameters which determine the channel index.

    **Return type**

    `Set`
  </Function>
</Class>

